tests/neg/infer-poly.stk
fun test1[X, Y <: X](x: X, y: Y): X = y

// TODO: type inference of result type discard errors
fun main: Void =
  test1 5 false // error

  val g = (x) => x   // error
